--- a/css/style.css
+++ b/css/style.css
@@ -510,6 +510,17 @@ nav {
         width: 250px;    /* Modifica questo valore per la larghezza su mobile */
         height: 250px;   /* Modifica questo valore per l'altezza su mobile */
     }
+
+    .before-after-slider img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;  /* Forza il centraggio */
+    }
 }
 
 @media (max-width: 480px) {
